# augur2itol

./: .gitignore  MIT-LICENSE.txt  README.md  README_Version5.md  index.html  pyproject.toml  structures_map.tsv  structures_map_seed.tsv
Example/: auspice.json
augur2itol/: __init__.py  auspice.py  cli.py  export_newick.py  itol_datasets.py  qc.py
docs/: docs_index_Version3.html  index.html  mutations_index.json  protein_viewer_3dmol.html
itol_plugins/: auto_colorstrip.py  auto_heatmap.py  auto_symbol.py  introductions_country.py  introductions_pie.py  introductions_piechart.py  labels.py  popup_pymol_links.py  tree_colors_region.py
scripts/: build_mutation_index.py  collapse_file.py  inspect_auspice_json.py  inventory_attrs.py  itol_build.py  upload_itol.py
